RESOLVED FIXED38029
+[WebTextIteratorPrivate initialize] is missing call to JSC::initializeThreading()
https://bugs.webkit.org/show_bug.cgi?id=38029
Summary +[WebTextIteratorPrivate initialize] is missing call to JSC::initializeThread...
David Kilzer (:ddkilzer)
Reported 2010-04-22 21:15:14 PDT
Created attachment 54126 [details] Patch Reviewed by NOBODY (OOPS!). Every other Objective-C class that calls WebCoreObjCFinalizeOnMainThread(self) in +initialize also calls JSC::initializeThreading(). The WebTextIteratorPrivate class was the only one missing this call. * WebView/WebTextIterator.mm: (+[WebTextIteratorPrivate initialize]): Added call to JSC::initializeThreading(). --- 2 files changed, 17 insertions(+), 0 deletions(-)
Attachments
Patch (1.39 KB, patch)
2010-04-22 21:15 PDT, David Kilzer (:ddkilzer)
timothy: review+
David Kilzer (:ddkilzer)
Comment 1 2010-04-23 00:37:58 PDT
Darin Adler
Comment 2 2010-04-23 09:14:47 PDT
Sounds like we need a helper function that does both.
Note You need to log in before you can comment on or make changes to this bug.