<http://webkit.org/b/38029> +[WebTextIteratorPrivate initialize] is missing call to JSC::initializeThreading()

Reviewed by Timothy Hatcher.

Every other Objective-C class that calls
WebCoreObjCFinalizeOnMainThread(self) in +initialize also calls
JSC::initializeThreading().  The WebTextIteratorPrivate class
was the only one missing this call.

* WebView/WebTextIterator.mm:
(+[WebTextIteratorPrivate initialize]): Added call to
JSC::initializeThreading().

Canonical link: https://commits.webkit.org/49436@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58156 268f45cc-cd09-0410-ab3c-d52691b4dbfc